force-app/main/default/objects/CampaignMember/fields/Assigned_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Agent_ID__c</fullName>
    <description>This field use only in report. request by K.Peeradonn</description>
    <formula>RTL_Assigned_Agent__r.Employee_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Agent ID</label>
    <type>Text</type>
</CustomField>