force-app/main/default/objects/CampaignMember/fields/Avaya_Completion_Code__c.field-meta.xml
<CustomField>
    <fullName>Avaya_Completion_Code__c</fullName>
    <description>For CC Outbound</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Completion Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>