force-app/main/default/objects/CampaignMember/fields/Batch_Retry_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Retry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Retry Date</label>
    <type>Date</type>
</CustomField>