force-app/main/default/objects/CampaignMember/fields/Campaign_Member_Link2__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Link2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Member Link2</label>
    <type>Url</type>
</CustomField>