force-app/main/default/objects/CampaignMember/fields/Campaign_Member_Link__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Link__c</fullName>
    <formula>HYPERLINK(&quot;/apex/CampaignMemberRedirectPage?id=&quot;+Id+&quot;&amp;isdtp=vw&quot;,&quot;View Campaign Member&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Member Link</label>
    <type>Text</type>
</CustomField>