force-app/main/default/objects/CampaignMember/fields/Car_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Car_Reference_No__c</fullName>
    <description>เลขที่อ้างอิงรถยนต์ Roddonjai</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Car Reference No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>