force-app/main/default/objects/CampaignMember/fields/Completion_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Completion_Code_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completion Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>