force-app/main/default/objects/CampaignMember/fields/Corebank_Branch_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Corebank_Branch_Code_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch / Team / AO Group Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>