force-app/main/default/objects/CampaignMember/fields/Corebank_Emp_Id_3__c.field-meta.xml
<CustomField>
    <fullName>Corebank_Emp_Id_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>