force-app/main/default/objects/CampaignMember/fields/Corebank_Emp_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Corebank_Emp_Name_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>