force-app/main/default/objects/CampaignMember/fields/Corebank_Emp_Phone_No_2__c.field-meta.xml
<CustomField>
    <fullName>Corebank_Emp_Phone_No_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Phone No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>