force-app/main/default/objects/CampaignMember/fields/createReferDate__c.field-meta.xml
<CustomField>
    <fullName>createReferDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>createReferDate</label>
    <type>DateTime</type>
</CustomField>