force-app/main/default/objects/CampaignMember/fields/Details_of_Status_2__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Status_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Details of Status</label>
    <type>TextArea</type>
</CustomField>