force-app/main/default/objects/CampaignMember/fields/HPAP_Reason_Code_4__c.field-meta.xml
<CustomField>
    <fullName>HPAP_Reason_Code_4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HPAP_Reason_Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>