force-app/main/default/objects/CampaignMember/fields/HPAP_Reason_Description_1__c.field-meta.xml
<CustomField>
    <fullName>HPAP_Reason_Description_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HPAP Reason Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>