force-app/main/default/objects/CampaignMember/fields/HPAP_Status_Code_5__c.field-meta.xml
<CustomField>
    <fullName>HPAP_Status_Code_5__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HPAP_Status_Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>