force-app/main/default/objects/CampaignMember/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <formula>HYPERLINK(&apos;/console?tsid=02u90000000usxa#%2F&apos;+ Lead.Id , Lead.FirstName +&quot; &quot;+ Lead.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Name (Formula)</label>
    <type>Text</type>
</CustomField>