force-app/main/default/objects/CampaignMember/fields/Lead_Score_Level__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Level__c</fullName>
    <label>Lead Score Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Hot</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>