force-app/main/default/objects/CampaignMember/fields/LGS_001__c.field-meta.xml
<CustomField>
    <fullName>LGS_001__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LGS_001</label>
    <length>255</length>
    <type>Text</type>
</CustomField>