force-app/main/default/objects/CampaignMember/fields/LGS_002__c.field-meta.xml
<CustomField>
    <fullName>LGS_002__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LGS_002</label>
    <length>255</length>
    <type>Text</type>
</CustomField>