force-app/main/default/objects/CampaignMember/fields/LGS_003__c.field-meta.xml
<CustomField>
    <fullName>LGS_003__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LGS_003</label>
    <length>255</length>
    <type>Text</type>
</CustomField>