force-app/main/default/objects/CampaignMember/fields/LGS_Assign_Rule__c.field-meta.xml
<CustomField>
    <fullName>LGS_Assign_Rule__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LGS_Assign_Rule</label>
    <length>40</length>
    <type>Text</type>
</CustomField>