force-app/main/default/objects/CampaignMember/fields/LGS_BrandCode__c.field-meta.xml
<CustomField>
    <fullName>LGS_BrandCode__c</fullName>
    <description>รหัส AL Brand Code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AL Brand Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>