force-app/main/default/objects/CampaignMember/fields/LGS_Dealer_Showroom_ID__c.field-meta.xml
<CustomField>
    <fullName>LGS_Dealer_Showroom_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LGS_Dealer_Showroom_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>