force-app/main/default/objects/CampaignMember/fields/LGS_File_Upload__c.field-meta.xml
<CustomField>
    <fullName>LGS_File_Upload__c</fullName>
    <description>ที่อยู่ไฟล์ที่ Upload จากลูกค้าเพื่อให้ AL Sales ดูเพิ่มเติม</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File Upload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>