force-app/main/default/objects/CampaignMember/fields/LGS_Lead_Received_Time__c.field-meta.xml
<CustomField>
    <fullName>LGS_Lead_Received_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LGS_Lead_Received_Time</label>
    <type>DateTime</type>
</CustomField>