force-app/main/default/objects/CampaignMember/fields/LGS_Partner__c.field-meta.xml
<CustomField>
    <fullName>LGS_Partner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LGS_Partner</label>
    <length>40</length>
    <type>Text</type>
</CustomField>