force-app/main/default/objects/CampaignMember/fields/LGS_VIN_No__c.field-meta.xml
<CustomField>
    <fullName>LGS_VIN_No__c</fullName>
    <description>เลขตัวถังรถ</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VIN_No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>