force-app/main/default/objects/CampaignMember/fields/No_of_Attempts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>