force-app/main/default/objects/CampaignMember/fields/Not_Interest_Reason2__c.field-meta.xml
<CustomField>
    <fullName>Not_Interest_Reason2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Not Interest Reason2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>