force-app/main/default/objects/CampaignMember/fields/Oldest_Closed_Date_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Closed_Date_Opportunity__c</fullName>
    <formula>IF( 
AND( 
ISBLANK(RTL_RelatedOpportunity_1__r.Closed_Won_Date__c), 
ISBLANK(RTL_RelatedOpportunity_2__r.Closed_Won_Date__c), 
ISBLANK(RTL_RelatedOpportunity_3__r.Closed_Won_Date__c), 
ISBLANK(RTL_RelatedOpportunity_4__r.Closed_Won_Date__c), 
ISBLANK(RTL_RelatedOpportunity_5__r.Closed_Won_Date__c) 
), 
NULL, 
DATE(2998,1,1) - MAX( 
DATE(2998,1,1) - BLANKVALUE(RTL_RelatedOpportunity_1__r.Closed_Won_Date__c , DATE(2998,1,1)), 
DATE(2998,1,1) - BLANKVALUE(RTL_RelatedOpportunity_2__r.Closed_Won_Date__c, DATE(2998,1,1)), 
DATE(2998,1,1) - BLANKVALUE(RTL_RelatedOpportunity_3__r.Closed_Won_Date__c ,DATE(2998,1,1)), 
DATE(2998,1,1) - BLANKVALUE(RTL_RelatedOpportunity_4__r.Closed_Won_Date__c, DATE(2998,1,1)), 
DATE(2998,1,1) - BLANKVALUE(RTL_RelatedOpportunity_5__r.Closed_Won_Date__c, DATE(2998,1,1)) 
) 
)</formula>
    <label>Oldest Closed Date Opportunity</label>
    <type>Date</type>
</CustomField>