force-app/main/default/objects/CampaignMember/fields/Partner_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Lead_ID__c</fullName>
    <description>Online Accquisition Reference Code form Partner Lead ID ของ Partner สำหรับส่งต่อให้ AVAYA (NID)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Lead ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>