force-app/main/default/objects/CampaignMember/fields/RMC_Is_Same_Team_Head__c.field-meta.xml
<CustomField>
    <fullName>RMC_Is_Same_Team_Head__c</fullName>
    <formula>$User.RMC_PWA_Team_Head__c = RTL_Assigned_Agent__r.RMC_PWA_Team_Head__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Same Team Head</label>
    <type>Checkbox</type>
</CustomField>