force-app/main/default/objects/CampaignMember/fields/RTL_Account_No_4__c.field-meta.xml
<CustomField>
    <fullName>RTL_Account_No_4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HP Account No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>