force-app/main/default/objects/CampaignMember/fields/RTL_AL_BlueBook__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_BlueBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AL Blue Book</label>
    <referenceTo>RTL_AL_BlueBook__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>