force-app/main/default/objects/CampaignMember/fields/RTL_AL_CAMP_EXP_DTE__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_CAMP_EXP_DTE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CAMP_EXP_DTE</label>
    <type>Date</type>
</CustomField>