force-app/main/default/objects/CampaignMember/fields/RTL_AL_car_bought_from__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_car_bought_from__c</fullName>
    <description>- T: เต้นท์รถ
- H: รถบ้าน</description>
    <label>Car bought from</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>T</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>