force-app/main/default/objects/CampaignMember/fields/RTL_AL_car_brand__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_car_brand__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Car brand</label>
    <length>30</length>
    <type>Text</type>
</CustomField>