force-app/main/default/objects/CampaignMember/fields/RTL_AL_car_gear__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_car_gear__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Car gear</label>
    <length>25</length>
    <type>Text</type>
</CustomField>