force-app/main/default/objects/CampaignMember/fields/RTL_AL_car_group__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_car_group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Car group</label>
    <length>30</length>
    <type>Text</type>
</CustomField>