force-app/main/default/objects/CampaignMember/fields/RTL_AL_Car_Status__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_Car_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Car Status</label>
    <length>99</length>
    <type>Text</type>
</CustomField>