force-app/main/default/objects/CampaignMember/fields/RTL_AL_car_type__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_car_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Car type</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>