force-app/main/default/objects/CampaignMember/fields/RTL_AL_car_year__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_car_year__c</fullName>
    <description>Year AD</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ปีคริสต์ศักราช</inlineHelpText>
    <label>Car year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>