force-app/main/default/objects/CampaignMember/fields/RTL_AL_comment__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>