force-app/main/default/objects/CampaignMember/fields/RTL_AL_contact_channel__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_contact_channel__c</fullName>
    <description>DS: ให้เจ้าหน้าที่ติดต่อให้บริการตามที่อยู่ (Delivery Service)
BR:  สะดวกเข้ารับบริการที่ธนาคารธนชาต</description>
    <label>Contact channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>