force-app/main/default/objects/CampaignMember/fields/RTL_AL_ContactProvince__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_ContactProvince__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>