force-app/main/default/objects/CampaignMember/fields/RTL_AL_ContactSubDistrict__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_ContactSubDistrict__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Sub District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>