force-app/main/default/objects/CampaignMember/fields/RTL_AL_ContactZipcode__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_ContactZipcode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Zip code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>