force-app/main/default/objects/CampaignMember/fields/RTL_AL_DownAmt__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_DownAmt__c</fullName>
    <description>เงินดาวน์ (บาท)</description>
    <label>DownAmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>