force-app/main/default/objects/CampaignMember/fields/RTL_AL_installment_periods__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_installment_periods__c</fullName>
    <label>Installment periods</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
            <value>
                <fullName>84</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>