force-app/main/default/objects/CampaignMember/fields/RTL_AL_IsCarBooked__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_IsCarBooked__c</fullName>
    <description>จองรถยนต์ไว้ที่โชว์รูมแล้วหรือยัง
0 = ยังไม่จอง,
1 = จองแล้ว&quot;</description>
    <label>CarBooked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>