force-app/main/default/objects/CampaignMember/fields/RTL_AL_oa_ref_code__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_oa_ref_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Online Acquisition Reference Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>