force-app/main/default/objects/CampaignMember/fields/RTL_AL_OFFR_ILA_AMT__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_OFFR_ILA_AMT__c</fullName>
    <label>OFFR_ILA_AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>