force-app/main/default/objects/CampaignMember/fields/RTL_AL_PayPerMonth__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_PayPerMonth__c</fullName>
    <description>ความสามารถในการผ่อนชำระต่อเดือน</description>
    <label>PayPerMonth</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>