force-app/main/default/objects/CampaignMember/fields/RTL_AL_promotion_detail__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_promotion_detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>promotion_detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>