force-app/main/default/objects/CampaignMember/fields/RTL_AL_Province_Car_Plate_No__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_Province_Car_Plate_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Province Car Plate No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>