force-app/main/default/objects/CampaignMember/fields/RTL_AL_Refer_No_5__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_Refer_No_5__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>refer_no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>