force-app/main/default/objects/CampaignMember/fields/RTL_AL_Req_No1_2__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_Req_No1_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>req_no1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>