force-app/main/default/objects/CampaignMember/fields/RTL_AL_response__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Yes / No</description>
    <label>Hot Lead</label>
    <type>Checkbox</type>
</CustomField>