force-app/main/default/objects/CampaignMember/fields/RTL_AL_Response_Flage__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_Response_Flage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AL Response Flage</label>
    <type>Checkbox</type>
</CustomField>