force-app/main/default/objects/CampaignMember/fields/RTL_AL_wanted_amount__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_wanted_amount__c</fullName>
    <label>Wanted amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>