force-app/main/default/objects/CampaignMember/fields/RTL_Assigned_Agent__c.field-meta.xml
<CustomField>
    <fullName>RTL_Assigned_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>