force-app/main/default/objects/CampaignMember/fields/RTL_Assigned_Branch__c.field-meta.xml
<CustomField>
    <fullName>RTL_Assigned_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Branch_and_Zone__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Branch_and_Zone__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>